# lessqlite

./: .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: test.yml
lessqlite/: core.py
tests/: a.dbml  fake.py  test.db  test_lessqlite.py
